Build and CI error fixing
* Describe user to install protobuf-c-compiler in README.md
* github CI fixed(hopefully)

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -17,7 +17,7 @@ jobs:
       run: git submodule update
     - name: make
       run: make
-    - name: make run
-      run: make run
-    - name: make test
-      run: make run
+    - name: make example_mnist
+      run: make example_mnist
+    - name: make example_yolo
+      run: make example_yolo
