CI bug fixed(maybe)

--- a/test/Makefile
+++ b/test/Makefile
@@ -31,6 +31,9 @@ src/parse.c: src/parse.re
 obj/%.d : src/%.c
 	mkdir -p obj; $(CC) $(CFLAGS) -M $< > $@
 
+../obj/%.d : ../src/%.c
+	mkdir -p obj; $(CC) $(CFLAGS) -M $< > $@
+
 -include $(patsubst obj/%.o, obj/%.d, $(OBJS))  
 -include $(patsubst ../obj/%.o, ../obj/%.d, $(OPSET_OBJS))  
 
