Main target is changed from yolo to mobilenet
* Tensor creation on resolving
* GlobalAveragePool implemented and tested
* Static allocation is not possible in YOLO
* mobilenet performance is very low
* Dyn alloc and memory optimization is needed

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all run clean cleanall example_yolo
+.PHONY: all run clean cleanall mnist yolo3 mobilenet2
 
 CC=gcc
 CFLAGS=-I../include -Wall -g -O0 -fsanitize=address
@@ -19,11 +19,14 @@ clean:
 test: $(OBJS) $(OPSET_OBJS)
 	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
 
-example_mnist:
+mnist:
 	venv/bin/python rt_onnxruntime.py ../examples/mnist/model.onnx -i ../examples/mnist/test_data_set_0/input_0.pb -t ../examples/mnist/test_data_set_0/output_0.pb -d -e 0.01 -l 1000
 
-example_yolo:
+yolo3:
 	venv/bin/python rt_onnxruntime.py ../examples/yolov3-tiny/yolov3-tiny.onnx -i ../examples/yolov3-tiny/test_data_set_0/input_0.pb -i ../examples/yolov3-tiny/test_data_set_0/input_1.pb -t ../examples/yolov3-tiny/test_data_set_0/output_0.pb -t ../examples/yolov3-tiny/test_data_set_0/output_1.pb -t ../examples/yolov3-tiny/test_data_set_0/output_2.pb -d -e 0.001 -l 100
+
+mobilenet2:
+	venv/bin/python rt_onnxruntime.py ../examples/mobilenet2/mobilenetv2-7.onnx -i ../examples/mobilenet2/test_data_set_0/input_0.pb -t ../examples/mobilenet2/test_data_set_0/output_0.pb -d -e 0.001 -l 100
 
 src/parse.c: src/parse.re
 	../bin/re2c -T $^ -o $@
