--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,19 +9,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Install ubuntu packages for CONNX
-      run: sudo apt install protobuf-c-compiler libprotobuf-c-dev
-    - name: Initialize submodule
-      run: git submodule init
-    - name: Update submodule
-      run: git submodule update
-    - name: make
-      run: make
-    - name: Install ubuntu packages for CONNX test
-      run: sudo apt install autoconf libtool
-    - name: make test
-      run: make test
-    - name: make mnist
-      run: make mnist
-    - name: make mobilenet2
-      run: make mobilenet2
+    - name: make RELEASE=1
+      run: make RELEASE=1
+    - name: Test
+      run: make run
