--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,12 @@
-[*] 
+[*]
 charset = utf-8
 indent_style = space
 indent_size = 4
+
+[*.c]
+indent_size = 4
+curly_bracket_next_line = false
+indent_brace_style = K&R
 
 [Makefile]
 indent_style = tab
