ESP32 build skeleton code is made
* Just read README.md

--- a/ports/esp32/Makefile
+++ b/ports/esp32/Makefile
@@ -1,9 +1,30 @@
-#
-# This is a project Makefile. It is assumed the directory this Makefile resides in is a
-# project subdirectory.
-#
+.PHONY: all run
 
-PROJECT_NAME := connx-esp32
+CONNX_HOME := ../..
+CWD := $(shell pwd)
+OPSET ?= $(ls ../../src/opset/*.c | sed 's/\.\.\/\.\.\/src\/opset\///' | sed 's/\.c$//' | tr '\n' ' ')
 
-include $(IDF_PATH)/make/project.mk
+all: build/connx-esp32.bin
+	idf.py flash
 
+run: 
+	idf.py monitor
+
+clean:
+	rm -rf gen
+	rm -rf spiffs
+	rm -f main/CMakeFiles.txt
+	rm -rf build
+
+build/connx-esp32.bin: spiffs main/CMakeFiles.txt
+	idf.py build
+
+gen:
+	make -C $(CONNX_HOME) OUT_DIR=$(CWD)/gen HAL_SRC=$(CWD)/main/hal.c ACCEL_SRC=$(CWD)/main/accel.c OPSET="$(OPSET)"
+
+main/CMakeFiles.txt: gen
+	bin/make_cmake.sh
+
+spiffs:
+	mkdir -p spiffs
+	-cp $(CONNX_HOME)/test/data/node/test_asin/* spiffs 2> /dev/null
