--- a/ports/esp32/main/CMakeLists.txt
+++ b/ports/esp32/main/CMakeLists.txt
@@ -6,9 +6,11 @@ idf_component_register(SRCS "main.c"
                        "../gen/hal.c"
                        "../gen/opset/Asin.c"
                        "../gen/opset/MatMul.c"
+                       "../gen/opset/MaxPool.c"
                        "../gen/opset/Add.c"
                        "../gen/opset/Mul.c"
                        "../gen/opset/Sub.c"
+                       "../gen/opset/Conv.c"
                        "../gen/opset/Reshape.c"
                        "../gen/opset/Relu.c"
                        INCLUDE_DIRS "../../../include")
