CI compiles connx in Debug mode to use sanitizer

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
     - name: build
       working-directory: build
       run: |
-          cmake -G Ninja ../ports/linux/
+          cmake -G Ninja ../ports/linux/ -DCMAKE_BUILD_TYPE=Debug
           ninja
     - name: MNIST
       working-directory: build
