SSE, AVX, AVX2 accelerating is supporting on x86
* mul_and_sum function supports accelerating

--- a/ports/linux/CMakeLists.txt
+++ b/ports/linux/CMakeLists.txt
@@ -39,8 +39,8 @@ add_custom_command(
 )
 
 # compile
-set(CMAKE_C_FLAGS_DEBUG "-pg -O0 -g -DDEBUG=1 -fsanitize=address")
-set(CMAKE_C_FLAGS_RELEASE "-O3")
+set(CMAKE_C_FLAGS_DEBUG "-pg -O0 -g -DDEBUG=1 -fsanitize=address -march=native -mavx")
+set(CMAKE_C_FLAGS_RELEASE "-O3 -march=native -mavx")
 
 add_executable(${PROJECT_NAME} ${SRC})
 
