--- a/ports/linux/CMakeLists.txt
+++ b/ports/linux/CMakeLists.txt
@@ -69,6 +69,9 @@ add_custom_target(mnist
 add_custom_target(mobilenet
     COMMAND python3 ${CONNX_HOME}/bin/run.py ${CMAKE_CURRENT_BINARY_DIR}/connx ${CONNX_HOME}/examples/mobilenet/ ${CONNX_HOME}/examples/mobilenet/test_data_set_0/input_0.data
     DEPENDS ${PROJECT_NAME})
+add_custom_target(yolov4
+    COMMAND python3 ${CONNX_HOME}/bin/run.py ${CMAKE_CURRENT_BINARY_DIR}/connx ${CONNX_HOME}/examples/yolov4/ ${CONNX_HOME}/examples/yolov4/test_data_set_0/input_0.data
+    DEPENDS ${PROJECT_NAME})
 add_custom_target(prof
     COMMAND gprof ${CMAKE_CURRENT_BINARY_DIR}/connx ${CMAKE_CURRENT_BINARY_DIR}/gmon.out
     DEPENDS ${PROJECT_NAME})
