--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,14 @@ jobs:
       working-directory: build
       run: |
           ninja mnist
+    - name: Clone onnx-connx
+      uses: actions/checkout@master
+      with:
+        repository: semihlab/onnx-connx
+        path: onnx-connx
     - name: ONNX Test Cases
-      working-directory: build
       run: |
-          ninja onnx
+        cd onnx-connx
+        ln -sf ../build/connx ./connx
+        pip3 install -U onnx protobuf tabulate pytest
+        pytest
