--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Clone onnx-connx
       uses: actions/checkout@master
       with:
-        repository: semihlab/onnx-connx
+        repository: tsnlab/onnx-connx
         path: onnx-connx
     - name: ONNX Test Cases
       run: |
