--- a/ports/linux/CMakeLists.txt
+++ b/ports/linux/CMakeLists.txt
@@ -67,7 +67,7 @@ add_custom_target(mobilenet
     COMMAND python3 ${CONNX_HOME}/bin/run.py ${CMAKE_CURRENT_BINARY_DIR}/connx ${CONNX_HOME}/examples/mobilenet/ ${CONNX_HOME}/examples/mobilenet/test_data_set_0/input_0.data
     DEPENDS ${PROJECT_NAME})
 add_custom_target(yolov4_single
-    COMMAND python3 -u ${CONNX_HOME}/bin/run.py ${CMAKE_CURRENT_BINARY_DIR}/connx ${CONNX_HOME}/examples/yolov4/test/ ${CONNX_HOME}/examples/yolov4/test/test_data_set_0/input_0.data
+    COMMAND python3 -u ${CONNX_HOME}/bin/run.py ${CMAKE_CURRENT_BINARY_DIR}/connx ${CONNX_HOME}/examples/yolov4/ ${CONNX_HOME}/examples/yolov4/test_data_set_0/input_0.data
     DEPENDS ${PROJECT_NAME})
 add_custom_target(yolov4
     COMMAND python3 -u ${CONNX_HOME}/bin/test.py ${CMAKE_CURRENT_BINARY_DIR}/connx ${CONNX_HOME}/examples/yolov4/
