Automate zynq build and run process with scripts

--- a/ports/zynq/Makefile
+++ b/ports/zynq/Makefile
@@ -1,17 +1,21 @@
-.PHONY: all run
+.PHONY: all run fclean clean build
 
-CONNX_HOME := ../..
-CWD := $(shell pwd)
-OPSET ?= $(shell bin/opset_list.sh $(CONNX_HOME))
-SRCS := src/hal.c src/accel.c src/main.c
+OPSET ?= $(shell bin/opset_list.sh)
 
 all: gen
 
-
 clean:
-	# rm -rf gen
+	rm -rf gen
+
+fclean:
+	rm -rf .metadata .Xil design_1_wrapper gen test test_system .analytics IDE.log *.str *.log RemoteSystemsTempFiles
 
 gen: src/accel.c
 	../../bin/gen.sh -o gen -p src
 	rm -rf gen/templates
 
+build: gen
+	$(shell bin/build.sh > /dev/null)
+
+run:
+	$(shell bin/run.sh > /dev/null)
