--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
+    - name: Run shellcheck
+      uses: ludeeus/action-shellcheck@master
     - name: Install ubuntu packages to lint
       run: sudo apt install clang-format-10
     - name: Check C lint
