--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,17 @@ on:
   pull_request:
 
 jobs:
+  strategy:
+    matrix:
+      onnx_version:
+        - 1.5.0
+        - 1.6.0
+        - 1.7.0
+        - 1.8.1
+        - 1.9.0
+        - 1.10.1
+        - 1.10.0
+        - latest
   build_and_test:
     runs-on: ubuntu-latest
     steps:
@@ -32,8 +43,11 @@ jobs:
         repository: tsnlab/onnx-connx
         path: onnx-connx
     - name: ONNX Test Cases
+      env:
+          ONNX_VERSION: ${{ matrix.onnx_version }}
       run: |
         cd onnx-connx
         cp ../build/connx ./onnx_connx/connx
-        pip3 install -U onnx protobuf tabulate pytest
+        [[ "$ONNX_VERSION" = "latest" ]] && ONNX_VERSION='' || ONNX_VERSION="==$ONNX_VERSION"
+        pip3 install -U "onnx${ONNX_VERSION}" protobuf tabulate pytest
         pytest -v
