--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,14 +31,18 @@ jobs:
     - name: Install ubuntu packages to build
       run: |
           sudo apt install cmake ninja-build protobuf-compiler
-          pip3 install numpy jinja2
+          pip3 install poetry
+          poetry config virtualenvs.create false
+          poetry install --no-interaction --no-ansi
     - name: Create build directory
       run: mkdir build
-    - name: build
+    - name: build C files
       working-directory: build
       run: |
           cmake -G Ninja ../ports/linux/ -DCMAKE_BUILD_TYPE=Debug
           ninja
+    - name: Build python package
+      run: poetry build
     - name: MNIST
       working-directory: build
       run: |
