--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,5 +22,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.8"
+    - name: Install dev dependencies
+      run: |
+          pip install poetry
+          poetry config virtualenvs.create false
+          poetry install
     - name: Check python lint
       uses: py-actions/flake8@v2
