Add python test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,8 @@ jobs:
           ninja
     - name: Build python package
       run: poetry build
+    - name: Test pyconnx
+      run: python pyconnx/test.py
     - name: MNIST
       working-directory: build
       run: |
