--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,18 +28,6 @@ jobs:
         run: python pyconnx/test.py
 
   build_and_test:
-    strategy:
-      fail-fast: false
-      matrix:
-        onnx_version:
-          - 1.5.0
-          - 1.6.0
-          - 1.7.0
-          - 1.8.1
-          - 1.9.0
-          - 1.10.1
-          - 1.11.0
-          - latest
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -65,6 +53,23 @@ jobs:
         working-directory: build
         run: |
             ninja mnist
+
+  onnx_tests:
+    needs: build_and_test
+    strategy:
+      fail-fast: false
+      matrix:
+        onnx_version:
+          - 1.5.0
+          - 1.6.0
+          - 1.7.0
+          - 1.8.1
+          - 1.9.0
+          - 1.10.1
+          - 1.11.0
+          - latest
+    runs-on: ubuntu-latest
+    steps:
       - name: Clone onnx-connx
         uses: actions/checkout@master
         with:
@@ -75,10 +80,9 @@ jobs:
             ONNX_VERSION: ${{ matrix.onnx_version }}
         run: |
           cd onnx-connx
-          cp ../build/connx ./onnx_connx/connx
           [[ "$ONNX_VERSION" = "latest" ]] && ONNX_VERSION='' || ONNX_VERSION="==$ONNX_VERSION"
-          pip3 install -U "onnx${ONNX_VERSION}" protobuf tabulate pytest
-          pytest -v
+          poetry add ../ && poetry install
+          poetry run pytest -v
 
   build_on_rpi:
     strategy:
